--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.8.3",
+    "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-icons": "^2.2.7",
