--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
     "moment": "^2.22.0",
     "multer": "^1.3.0",
     "socket.io": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.8.2"
   }
 }
