--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "start:dev": "webpack-dev-server",
     "build": "webpack -p"
   },
@@ -12,15 +13,21 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.8.3",
+    "jest": "^23.4.2",
+    "node-sass": "^4.9.2",
     "prop-types": "^15.6.1",
+    "raf": "^3.4.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-icons": "^2.2.7",
