Added postcss autoprefixer & fixed css

--- a/client/package.json
+++ b/client/package.json
@@ -38,5 +38,9 @@
     "url-loader": "^1.0.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.1.5",
+    "postcss-loader": "^3.0.0"
   }
 }
