--- a/client/package.json
+++ b/client/package.json
@@ -11,21 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.1.5",
     "axios": "^0.18.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "enzyme": "^3.3.0",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^23.4.2",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.1",
     "raf": "^3.4.0",
     "react": "^16.3.1",
@@ -38,9 +40,5 @@
     "url-loader": "^1.0.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.1.5",
-    "postcss-loader": "^3.0.0"
   }
 }
